# TwinOps

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: Makefile  README.rst  conf.py  examples.rst  index.rst
docs/api/: core.rst  estimation.rst  health.rst  index.rst  io.rst  ml.rst  physics.rst
examples/neural_dynamics/: run_neural_dynamics.py
examples/online_degradation/: README.md  run_gradual_degradation.py  run_online_degradation.py  run_thermal_degradation.py
examples/pump_predictive_maintenance/: README.md  run_pump_twin.py
examples/symbolic_regression/: README.md  run_symbolic_ode.py  run_twin_symbolic.py
examples/turbofan_engine_degradation/: README.md  run_turbofan_twinops.py
tests/: __init__.py  test_imports.py  test_physics_symbolic.py
twinops/: __init__.py
twinops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
twinops/core/: __init__.py  component.py  history.py  signals.py  system.py
twinops/estimation/: __init__.py  ekf.py  residuals.py
twinops/health/: __init__.py  indicators.py  rul.py
twinops/io/: __init__.py  serializers.py  streams.py
twinops/ml/: __init__.py  dynamics.py  learner.py  residual.py  surrogate.py  training.py
twinops/physics/: __init__.py  compose.py  fmi.py  integrators.py  library.py  neural_ode.py  ode.py  symbolic.py
twinops/simulation/: __init__.py
twinops/simulations/: _oscillators.py  _utils.py
